--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <!-- CSS File -->
         <link rel="stylesheet" href="css/style.css">
-        <title>Tip Calculator App Main</title>
+        <title>Tip Calculator</title>
     </head>
     <body>
         <div class="head container">
